--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -23,12 +23,17 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/gray"/>
+            android:background="@color/white"
+            android:visibility="visible"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/white"
-            android:visibility="gone"/>
+            android:background="@color/black"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_d"
+            android:visibility="visible"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,7 +43,7 @@
             android:paddingRight="10dp"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
-            android:background="@color/gray_b">
+            android:background="#bbb">
             <View
                 android:id="@+id/operation_btn"
                 android:layout_width="28dp"
@@ -166,6 +171,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
+        tools:visibility="gone"
         android:background="@color/white">
         <include layout="@layout/merger_member_selector" />
         <View
@@ -176,7 +182,22 @@
             android:layout_alignParentRight="true"
             android:layout_marginBottom="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/icon_restore" />
+            android:background="@drawable/icon_fold_screen" />
+            <TextView
+                android:id="@+id/member_selector_prompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:paddingTop="5dp"
+                android:background="@drawable/icon_gray_bubble"
+                android:layout_above="@+id/close_member_selector_btn"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:text="完成选择或返回"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                tools:visibility="visible"/>
     </RelativeLayout>
 
     <include layout="@layout/merge_common_waiting" />
