--- a/app/src/main/res/layout/layout_my.xml
+++ b/app/src/main/res/layout/layout_my.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+<LinearLayout
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -155,6 +159,30 @@
             android:textColor="@color/black"
             android:text="13480987994"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/my_info_margin_each"
+        android:paddingLeft="@dimen/my_info_padding"
+        android:paddingRight="@dimen/my_info_padding"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="@dimen/my_info_size"
+            android:text="版本"/>
+        <TextView
+            android:id="@+id/app_version"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textSize="@dimen/my_info_size"
+            android:textColor="@color/black"
+            android:text="@string/app_version"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/logout_btn"
@@ -163,6 +191,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginLeft="@dimen/my_info_padding"
         android:layout_marginRight="@dimen/my_info_padding"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
         android:background="@drawable/shape_bg_red"
         android:padding="6dp"
@@ -171,3 +200,4 @@
         android:text="退  出"/>
 
 </LinearLayout>
+</ScrollView>
